# steroids

./: .gitignore  CMakeLists.txt  README.md
MainProject/: MainProject.sln
MainProject/Client/: Client.vcxproj  Client.vcxproj.filters  packages.config
MainProject/Server/: Server.vcxproj  Server.vcxproj.filters
client/: Client.cpp  Client.h  Dialog.cpp  Dialog.h  Window.cpp  Window.h  main.cpp  main_.cpp
common/: Arena.cpp  Arena.h  Color.h  Config.cpp  Config.h  Config.json  Fruit.cpp  Fruit.h  Packet.h  Player.cpp  Player.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  Snake.cpp  Snake.h  Socket.cpp  Socket.h  config.h  net.cpp  net.h  vec2.cpp  vec2.h
resources/: config.json  server_config.json
server/: Server.cpp  Server.h  main.cpp
